Use cached Integer objects rather than construct new instances